samples/_failures_safe/1761495609_35613e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27df836a.c: In function ‘main’:
./samples/SAFE/__tmp_27df836a.c:157:12: error: missing terminating " character
  157 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_27df836a.c:157:5: error: expected expression at end of input
  157 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_27df836a.c:157:5: error: expected declaration or statement at end of input
